--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.20.0",
+    "eslint": "^9.20.1",
+    "globals": "^15.15.0",
+    "ts-node": "^10.9.2",
+    "typescript-eslint": "^8.24.0"
   }
 }
