--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@types/mocha": "^10.0.10",
     "eslint": "^9.20.1",
+    "eslint-plugin-mocha": "^10.5.0",
     "globals": "^15.15.0",
+    "mocha": "^11.1.0",
     "ts-node": "^10.9.2",
     "typescript-eslint": "^8.24.0"
   }
