--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "license": "ISC",
   "author": "geozi",
   "type": "module",
-  "main": "app.js",
+  "main": "src/app.ts",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "tsc",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
