--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Contains the backend implementation of a Job Board API",
   "license": "ISC",
   "author": "geozi",
-  "type": "module",
   "main": "src/app.ts",
+  "type": "module",
   "scripts": {
+    "start": "npx tsx src/app.ts",
     "test": "mocha",
     "build": "tsc",
     "lint": "eslint ."
@@ -14,11 +15,12 @@
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@types/mocha": "^10.0.10",
+    "@types/node": "^22.13.4",
     "eslint": "^9.20.1",
     "eslint-plugin-mocha": "^10.5.0",
     "globals": "^15.15.0",
     "mocha": "^11.1.0",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript-eslint": "^8.24.0"
   }
 }
