--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@types/mocha": "^10.0.10",
+    "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "^22.13.4",
     "eslint": "^9.20.1",
     "eslint-plugin-mocha": "^10.5.0",
@@ -22,5 +23,9 @@
     "mocha": "^11.1.0",
     "tsx": "^4.19.2",
     "typescript-eslint": "^8.24.0"
+  },
+  "dependencies": {
+    "mongoose": "^7.8.6",
+    "mongoose-unique-validator": "^4.0.1"
   }
 }
