--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/mocha": "^10.0.10",
     "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "^22.13.4",
+    "@types/sinon": "^17.0.3",
     "eslint": "^9.20.1",
     "eslint-plugin-mocha": "^10.5.0",
     "globals": "^15.15.0",
     "mocha": "^11.1.0",
+    "sinon": "^19.0.2",
     "tsx": "^4.19.2",
     "typescript-eslint": "^8.24.0"
   },
