test: Added user.model unit test suite; removed example.test.ts; changed export variable name from userModel to User in user.model;  modified tsconfig to include tests/.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["node"],
+    "types": ["node", "mocha"],
     "moduleResolution": "node"
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "tests/**/*.ts"]
+  "include": ["src/**/*.ts", "tests/**/*.ts"],
+  "exclude": ["node_modules"]
 }
