--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "npx tsx src/app.ts",
     "test": "mocha",
     "build": "tsc",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "generateDocs": "npx typedoc"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
