--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-plugin-mocha": "^10.5.0",
     "globals": "^15.15.0",
     "mocha": "^11.1.0",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "sinon": "^19.0.2",
     "tsx": "^4.19.2",
     "typedoc": "^0.27.7",
