--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@types/chai-as-promised": "^8.0.1",
     "@types/mocha": "^10.0.10",
     "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "^22.13.4",
     "@types/sinon": "^17.0.3",
+    "chai": "^5.2.0",
+    "chai-as-promised": "^8.0.1",
     "eslint": "^9.20.1",
     "eslint-plugin-mocha": "^10.5.0",
     "globals": "^15.15.0",
