--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@types/chai-as-promised": "^8.0.1",
+    "@types/express": "^5.0.0",
     "@types/mocha": "^10.0.10",
     "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "^22.13.4",
@@ -34,6 +35,8 @@
     "typescript-eslint": "^8.24.0"
   },
   "dependencies": {
+    "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "mongoose": "^7.8.6",
     "mongoose-unique-validator": "^4.0.1"
   }
