build: Added bcryptjs and types/bcryptjs dependencies.

--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/chai-as-promised": "^8.0.1",
     "@types/express": "^5.0.0",
     "@types/mocha": "^10.0.10",
     "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "^22.13.4",
     "@types/sinon": "^17.0.3",
+    "bcryptjs": "^3.0.2",
     "chai": "^5.2.0",
     "chai-as-promised": "^8.0.1",
     "eslint": "^9.20.1",
