--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "module": "ESNext",
     "outDir": "./dist/src",
     "rootDirs": ["./src", "./tests"],
+    "baseUrl": "./",
+    "paths": { "*": ["src/*"] },
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
