--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "mocha",
     "build": "tsc",
     "lint": "eslint .",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'tsx' src/app.ts",
     "generateDocs": "npx typedoc"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "eslint-plugin-mocha": "^10.5.0",
     "globals": "^15.15.0",
     "mocha": "^11.1.0",
+    "nodemon": "^3.1.9",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "sinon": "^19.0.2",
@@ -37,6 +39,7 @@
     "typescript-eslint": "^8.24.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "mongoose": "^7.8.6",
