--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/mocha": "^10.0.10",
     "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "^22.13.4",
+    "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
     "@types/sinon": "^17.0.3",
     "bcryptjs": "^3.0.2",
     "chai": "^5.2.0",
@@ -43,6 +45,8 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "mongoose": "^7.8.6",
-    "mongoose-unique-validator": "^4.0.1"
+    "mongoose-unique-validator": "^4.0.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   }
 }
