--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/chai-as-promised": "^8.0.1",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/mocha": "^10.0.10",
     "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "^22.13.4",
@@ -44,6 +45,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.6",
     "mongoose-unique-validator": "^4.0.1",
     "passport": "^0.7.0",
